2003-02-15  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/scripts/mktap.py, twisted/scripts/twistd.py: Added the
	--appname and --originalname parameters, respectively.

	* twisted/doc/man/mktap.py, twisted/doc/man/twistd.py: Documented
	the above two new parameters.

2003-02-12  Kevin Turner  <acapnotic@twistedmatrix.com>

	* twisted/python/text.py (docstringLStrip): 1.6 This will be going
	away in favor of inspect.getdoc.

2003-02-11  Kevin Turner  <acapnotic@twistedmatrix.com>

	* twisted/im/interfaces.py (IAccount): 1.4 New instance attribute:
	"client".  Also, added methods getGroup and getPerson.

	* twisted/im/basechat.py (ChatUI.getPerson, .getGroup): 1.7 No
	longer accept a Class parameter.  The class of the person/group is
	determined by the account they are obtained through.

	* twisted/im/basesupport.py (AbstractPerson, AbstractGroup): 1.15
	Hold a reference to account, not client.  Also, lose the "chatui"
	parameter -- this may require follow-up.
	(AbstractAccount.__setstate__): 1.15 remove this method.  (Why
	was self.port = int(self.port) in __setstate__?)
	(AbstractAccount): 1.15 implement getGroup and getPerson here,
	using _groupFactory and _personFactory factory attributes.

	* twisted/im/gtkchat.py (GtkChatClientUI.getPerson, .getGroup): 1.15
	follow ChatUI interface changes.

2003-02-09  Brian Warner  <warner@lothar.com>

	* twisted/internet/error.py (ProcessDone,ProcessTerminated):
	* twisted/internet/process.py (Process.maybeCallProcessEnded,
	* twisted/internet/process.py (PTYProcess.maybeCallProcessEnded,
	record the signal that killed the process in .signal, set .signal
	to None if the process died of natural causes, set .exitCode to None
	if the process died of a signal.
	* twisted/test/test_process.py: verify .signal, .exitCode are set
	to None when they ought to be, verify signal-death is reported with
	ProcessTerminated and not ProcessDone

	* ChangeLog: Set add-log-time-format to iso8601.
